--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
         "@typescript-eslint/parser": "^4.19.0",
         "babel-loader": "^8.2.2",
         "css-loader": "^5.1.3",
-        "css-minimizer-webpack-plugin": "^1.3.0",
+        "css-minimizer-webpack-plugin": "^3.0.0",
         "eslint": "^7.22.0",
         "eslint-config-airbnb": "^18.2.1",
         "eslint-config-prettier": "^8.1.0",
@@ -45,10 +45,6 @@
         "less-loader": "^8.0.0",
         "mini-css-extract-plugin": "^1.3.9",
         "prettier": "^2.2.1",
-        "stylelint": "^13.12.0",
-        "stylelint-config-prettier": "^8.0.2",
-        "stylelint-order": "^4.1.0",
-        "stylelint-prettier": "^1.2.0",
         "terser-webpack-plugin": "^5.1.1",
         "ts-jest": "^26.5.4",
         "ts-node": "^9.1.1",
@@ -61,6 +57,7 @@
     "dependencies": {
         "@navikt/array-utils": "^0.0.1",
         "@navikt/date-utils": "^0.0.2",
+        "@navikt/fnrvalidator": "^1.1.4",
         "@navikt/period-utils": "^0.0.3",
         "@types/react": "^17.0.3",
         "@types/react-dom": "^17.0.3",
